--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <p>Something is brewing</p>
       <p>(*´ڡ`●)</p>
       <br />
-      <a href="mailto:hey@tappy.co">Email</a>
+      <a href="https://instagram.com/tappyco">Instagram</a>
+      <a href="mailto:hello@tappy.co">Email</a>
     </main>
   </body>
 </html>
